--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -74,13 +74,13 @@
     "\n",
     "**References:**\n",
     "\n",
-    "<a name=\"cite_note-1\"></a> [^](#cite_ref-1) Archer, Jodie. “Reading the Bestseller: An Analysis of 20,000 Novels - ProQuest.” Proquest.com, 2014, www.proquest.com/openview/ed3c2c9fdc828bdbd21d29ae1d06105e/1?pq-origsite=gscholar&cbl=18750. Accessed 30 Oct. 2024.\n",
+    "1.<a name=\"cite_note-1\"></a> [^](#cite_ref-1) Archer, Jodie. “Reading the Bestseller: An Analysis of 20,000 Novels - ProQuest.” Proquest.com, 2014, www.proquest.com/openview/ed3c2c9fdc828bdbd21d29ae1d06105e/1?pq-origsite=gscholar&cbl=18750. Accessed 30 Oct. 2024.\n",
     "\n",
-    "<a name=\"cite_note-2\"></a> [^](#cite_ref-2) Archer, Jodie; and Jockers, Matthew L. “The Bestseller Code.” Google Books, 2016, books.google.com/books?hl=en&lr=&id=F4JzCwAAQBAJ&oi=fnd&pg=PP2&dq=What+specific+factors+have+carried+the+greatest+weight+in+driving+novels+in+the+%27Paperback+Nonfiction%27+category+to+reach+%27New+York+Times+Bestseller%27+status&ots=jshCm50NHQ&sig=6HtmHLJRrE61_-8XeIT4JBRarpA#v=onepage&q&f=false. Accessed 30 Oct. 2024.\n",
+    "2.<a name=\"cite_note-2\"></a> [^](#cite_ref-2) Archer, Jodie; and Jockers, Matthew L. “The Bestseller Code.” Google Books, 2016, books.google.com/books?hl=en&lr=&id=F4JzCwAAQBAJ&oi=fnd&pg=PP2&dq=What+specific+factors+have+carried+the+greatest+weight+in+driving+novels+in+the+%27Paperback+Nonfiction%27+category+to+reach+%27New+York+Times+Bestseller%27+status&ots=jshCm50NHQ&sig=6HtmHLJRrE61_-8XeIT4JBRarpA#v=onepage&q&f=false. Accessed 30 Oct. 2024.\n",
     "\n",
-    "<a name=\"cite_note-3\"></a> [^](#cite_ref-3) Clemente, Michel. ‌“Do Critics Make Bestsellers? Opinion Leaders and the Success of Books.” JOURNAL of MEDIA ECONOMICS, 2024, https://doi.org/10.1080//08997760701193720. Accessed 30 Oct. 2024.\n",
+    "3.<a name=\"cite_note-3\"></a> [^](#cite_ref-3) Clemente, Michel. ‌“Do Critics Make Bestsellers? Opinion Leaders and the Success of Books.” JOURNAL of MEDIA ECONOMICS, 2024, https://doi.org/10.1080//08997760701193720. Accessed 30 Oct. 2024.\n",
     "\n",
-    "<a name=\"cite_note-4\"></a> [^](#cite_ref-4) Koehne-Drube, Pamela. “The New York Times Bestseller Lists Explained.” Novlr.org, Novlr, 27 May 2024, www.novlr.org/the-reading-room/the-new-york-times-bestseller-lists-explained. Accessed 30 Oct. 2024."
+    "4/.<a name=\"cite_note-4\"></a> [^](#cite_ref-4) Koehne-Drube, Pamela. “The New York Times Bestseller Lists Explained.” Novlr.org, Novlr, 27 May 2024, www.novlr.org/the-reading-room/the-new-york-times-bestseller-lists-explained. Accessed 30 Oct. 2024."
    ]
   },
   {
