--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -28,7 +28,7 @@
     "- Navyaa Gupta\n",
     "- Satya Rajendra\n",
     "- Pranav Kumar Soma\n",
-    "- Wasp"
+    "- Advika Shankar"
    ]
   },
   {
