--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -673,12 +673,11 @@
    "metadata": {},
    "source": [
     "\n",
-    "Read over the [COGS108 Team Policies](https://github.com/COGS108/Projects/blob/master/COGS108_TeamPolicies.md) individually. Then, include your group’s expectations of one another for successful completion of your COGS108 project below. Discuss and agree on what all of your expectations are. Discuss how your team will communicate throughout the quarter and consider how you will communicate respectfully should conflicts arise. By including each member’s name above and by adding their name to the submission, you are indicating that you have read the COGS108 Team Policies, accept your team’s expectations below, and have every intention to fulfill them. These expectations are for your team’s use and benefit — they won’t be graded for their details.\n",
-    "\n",
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
-    "* ..."
+    "* *Team members will communicate through Messages.*\n",
+    "* *Team members will communicate bluntly but politely.*\n",
+    "* *Major decisions will be made after discussion and must be approved by all team members. Minor decisions will be made by the individuals assigned to the certain parts of the project. If decisions need to be made in a short time frame and certain team members are unresponsive or unavailable, the remaining team members can do what they see fit.*\n",
+    "* *Tasks will be assigned based on the relevant skills of the team members and what tasks team members want to do. Team members are expected to be aware of progress in parts of the project that are not their own.*\n",
+    "* *If team members can not complete their portions of the project due to sickness, injury, or emergency, they should let the group know as soon as possible and the other team members should try their best to help complete the portion. If team members are not completing their portions without proper explanation, the group should call them out and ask them to step up.*\n"
    ]
   },
   {
