--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -120,14 +120,13 @@
     "  - Link to the dataset: NYTinfo.csv (assembled by our group, file added to repo)\n",
     "  - Number of observations: 3135   \n",
     "  - Number of variables: 12\n",
-    "\n\n",
+    "\n",
+    "\n",
     "- Dataset #2\n",
     "  - Dataset Name: Authors and their number of bestselling titles, and titles and their longest contiguous run on the Bestseller's list.\n",
     "  - Link to the dataset: Authors.csv Titles.csv (data is pulled using the code below, from the Books API)\n",
     "  - Number of observations: 83   \n",
-    "  - Number of variables: 2 independent variables (Author name and title), and 2 dependent variables (number of bestsellers and longest contiguous run of the title)\n",
-    "\n",
-    "Now write 2 - 5 sentences describing each dataset here. Include a short description of the important variables in the dataset; what the metrics and datatypes are, what concepts they may be proxies for. Include information about how you would need to wrangle/clean/preprocess the dataset\n"
+    "  - Number of variables: 2 independent variables (Author name and title), and 2 dependent variables (number of bestsellers and longest contiguous run of the title)"
    ]
   },
   {
