--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "- Dataset #2\n",
     "  - Dataset Name: Authors and their number of bestselling titles, and titles and their longest contiguous run on the Bestseller's list.\n",
-    "  - Link to the dataset: Authors.csv Titles.csv (data is pulled using the code below, from the Books API)\n",
+    "  - Link to the dataset: Authors.csv, Titles.csv (data is pulled using the code below, from the Books API)\n",
     "  - Number of observations: 83   \n",
     "  - Number of variables: 2 independent variables (Author name and title), and 2 dependent variables (number of bestsellers and longest contiguous run of the title)"
    ]
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Characteristics of 'New York Times Bestsellers' in 'Paperback Nonfiction' Category"
+    "## Dataset #1: Characteristics of 'New York Times Bestsellers' in 'Paperback Nonfiction' Category"
    ]
   },
   {
@@ -412,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Author and Contiguous Titles Data"
+    "## Dataset #2: Author and Contiguous Titles Data"
    ]
   },
   {
