Save progress on DataCheckpoint

--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -126,8 +126,7 @@
     "  - Dataset Name: Authors and their number of bestselling titles, and titles and their longest contiguous run on the Bestseller's list.\n",
     "  - Link to the dataset: Authors.csv, Titles.csv (data is pulled using the code below, from the Books API)\n",
     "  - Number of observations: 83   \n",
-    "  - Number of variables: 2 independent variables (Author name and title), and 2 dependent variables (number of bestsellers and longest contiguous run of the title)",
-    "\n",
+    "  - Number of variables: 2 independent variables (Author name and title), and 2 dependent variables (number of bestsellers and longest contiguous run of the title)\n",
     "\n",
     "- Dataset #3\n",
     "  - Dataset Name: Books and their goodreads info, including season published, rating, and number of awards recieved.\n",
@@ -647,6 +646,20 @@
     "(pd.DataFrame.from_dict(data=books_max_contig, orient='index')\n",
     "   .to_csv('Titles.csv', header=False))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset #3: Goodreads Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
