--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -134,17 +134,17 @@
    "source": [
     "Before collecting data, we originally thought there would be 150-300 observations in our dataset; our rationale was that there are only around 75 unique 'Paperback Nonfiction' novels on the 'New York Times Bestseller' list per year and our dataset spans 4 years. However, our current dataset includes over 3000 observations, with many title repeats, because we would like to take into consideration the change in rank per week and the number of weeks that a certain novel remained on the list in the time frame from 2020-2023. If there happens to be any missing data or discrepencies, we will leave the missing data as N/A and tailor our analysis based on which data is missing and how much of it is missing. \n",
     "\n",
-    "For our curated dataset, we have 12 variables: book title, author, publisher, year on list, rank on list, # of weeks on list, whether book contents pertained to current issues, # of awards, publication season, appearance on a celebrity book club list, # of previous bestseller books by the same author, and average rating on Goodreads. \n",
+    "For our curated dataset, we will have 12 variables: book title, author, publisher, year on list, rank on list, # of weeks on list, whether book contents pertained to current issues, # of awards, publication season, appearance on a celebrity book club list, # of previous bestseller books by the same author, and average rating on Goodreads. \n",
     "\n",
     "The book title, author, and publisher data is in a string/object format, while the year on list and rank on list data is in an int format. The data pertaining to these five variables was manually pulled from _The New York Times_ website (https://www.nytimes.com/books/best-sellers/), and we specifically looked at the weekly lists published for the 'Paperback Nonfiction' category from January 5, 2020 to December 31, 2023.\n",
     "\n",
     "For the current context variable, we looked at book summaries on goodreads and determined if the book discussed current cultural, political, or any other type of issue versus if it was timeless or historical. The datatype is either 'Yes' if the book does have current context or 'No' if it does not.\n",
     "\n",
-    "For the author to bestsellers and contiguous stretches on the bestselling lists for each unique title, we called HTTP Requests from the NYT Books API, and converted the data into CSV palatable for usage. The data we have, being the unique titles and author names are Strings, whereas the counts for both the number of publications and the number of contiguous weeks on the list are int datatypes.\n",
+    "For the author to bestsellers and contiguous stretches on the bestselling lists for each unique title, we called HTTP Requests from the NYT Books API, and converted the data into CSV palatable for usage. The data we have, being the unique titles and author names are Strings, whereas the counts for both the number of publications and the number of contiguous weeks on the list are int datatypes.  We will eventually be merging this data to dataset #1, adding author credibility/experience and # of weeks on list as two other variables for our final dataset. \n",
     "\n",
     "For the appearance on a celebrity book club list, we iterated through NYTinfo.csv to check whether each book had appeared on a celebrity's book club list. Specifically we were checking appearances in Reese Witherspoon and Oprah Winfrey's book club lists. The data is stored as a column of booleans corresponding to each title on the Bestseller list.\n",
     "\n",
-    "For the goodreads info, we first obtained at all the unique titles in the NYTinfo.csv. Then, we iterated through them using a web scraper to obtain the publication date/season, the number of awards recieved, and the aggregated rating of the book.\n",
+    "For the goodreads info, we first obtained at all the unique titles in the NYTinfo.csv. Then, we iterated through them using a web scraper to obtain the publication date/season, the number of awards recieved, and the aggregated rating of the book. We will eventually be merging this data from dataset #2 to dataset #1, adding publication date/season, number of awards received, and aggregated rating of the book as three other variables for our final dataset. \n",
     "\n",
     "Here are some links showing where different parts of the data were taken from:\n",
     "- Book Title (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "4             Yes  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 'Celebrity Book Club List' Data Wrangling"
+    "### Celebrity Book Club List, Author Credibility/Experience Data Wrangling"
    ]
   },
   {
@@ -633,7 +633,7 @@
     "   .to_csv('Titles.csv', header=False))"
    ]
   },
-{
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -769,7 +769,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset #3: Goodreads Data"
+    "## Dataset #2: Goodreads Data"
    ]
   },
   {
