--- a/DataCheckpoint_Group019-FA24.ipynb
+++ b/DataCheckpoint_Group019-FA24.ipynb
@@ -140,7 +140,7 @@
     "\n",
     "For the current context variable, we looked at book summaries on goodreads and determined if the book discussed current cultural, political, or any other type of issue versus if it was timeless or historical. The datatype is either 'Yes' if the book does have current context or 'No' if it does not.\n",
     "\n",
-    "For the author to bestsellers and contiguous stretches on the bestselling lists for each unique title, we called HTTP Requests from the NYT Books API, and converted the data into CSV palatable for usage. The data we have, being the unique titles and author names are Strings, whereas the counts for both the number of publications and the number of contiguous weeks on the list are int datatypes.  We will eventually be merging this data to dataset #1, adding author credibility/experience and # of weeks on list as two other variables for our final dataset. \n",
+    "For the author to bestsellers and contiguous stretches on the bestselling lists for each unique title, we called HTTP Requests from the NYT Books API, and converted the data into CSV palatable for usage. The data we have, being the unique titles and author names are Strings, whereas the counts for both the number of publications and the number of contiguous weeks on the list are int datatypes.  This data is merged to dataset #1 at the end of the data wrangling subsection, adding author credibility/experience and # of weeks on list as two other variables for our final dataset. \n",
     "\n",
     "For the appearance on a celebrity book club list, we iterated through NYTinfo.csv to check whether each book had appeared on a celebrity's book club list. Specifically we were checking appearances in Reese Witherspoon and Oprah Winfrey's book club lists. The data is stored as a column of booleans corresponding to each title on the Bestseller list.\n",
     "\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "4             Yes  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
