fixed the NYT dataset

--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -147,7 +147,234 @@
    "outputs": [],
    "source": [
     "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION "
+    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION \n",
+    "import requests\n",
+    "from datetime import datetime, timedelta\n",
+    "import time\n",
+    "import csv\n",
+    "\n",
+    "API_KEY = \"0JOvNKsVH7A0zMtTDqPn3G7pcEB90mRI\"\n",
+    "BASE_URL = \"https://api.nytimes.com/svc/books/v3/lists\"\n",
+    "\n",
+    "def generate_weekly_dates(start_date, end_date):\n",
+    "    dates = []\n",
+    "    current_date = start_date\n",
+    "    while current_date <= end_date:\n",
+    "        dates.append(current_date)\n",
+    "        current_date += timedelta(days=7)\n",
+    "    return dates\n",
+    "\n",
+    "def get_weekly_lists_and_save_to_csv(start_date, end_date, output_csv_file):\n",
+    "    weekly_dates = generate_weekly_dates(start_date, end_date)\n",
+    "    \n",
+    "    # Open CSV file for writing\n",
+    "    with open(output_csv_file, \"w\", newline=\"\", encoding=\"utf-8\") as csvfile:\n",
+    "        writer = csv.writer(csvfile)\n",
+    "        \n",
+    "        # Write header row with the new \"Publisher\" field\n",
+    "        writer.writerow([\"Date\", \"Title\", \"Author\", \"Rank\", \"Publisher\", \"Description\"])\n",
+    "        \n",
+    "        # Loop through weekly dates and fetch data\n",
+    "        for date in weekly_dates:\n",
+    "            date_str = date.strftime(\"%Y-%m-%d\")\n",
+    "            url = f\"{BASE_URL}/{date_str}/paperback-nonfiction.json?api-key={API_KEY}\"\n",
+    "            \n",
+    "            try:\n",
+    "                response = requests.get(url)\n",
+    "                if response.status_code == 200:\n",
+    "                    data = response.json()\n",
+    "                    books = data[\"results\"][\"books\"]\n",
+    "                    \n",
+    "                    # Write book details to CSV file\n",
+    "                    for book in books:\n",
+    "                        writer.writerow([\n",
+    "                            data[\"results\"][\"bestsellers_date\"],\n",
+    "                            book[\"title\"],\n",
+    "                            book[\"author\"],\n",
+    "                            book[\"rank\"],\n",
+    "                            book[\"publisher\"]\n",
+    "                        ])\n",
+    "            except Exception as e:\n",
+    "                print(f\"An error occurred for {date_str}: {e}\")\n",
+    "            time.sleep(12)\n",
+    "\n",
+    "start_date = datetime(2020, 1, 5)\n",
+    "end_date = datetime(2023, 12, 31)\n",
+    "\n",
+    "# Call the function and save data\n",
+    "output_csv_file = \"NYTInfo_2.csv\"\n",
+    "get_weekly_lists_and_save_to_csv(start_date, end_date, output_csv_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year on List</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Author</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Publisher</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>I HEARD YOU PAINT HOUSES</td>\n",
+       "      <td>Charles Brandt</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Steerforth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>NO ONE IS TOO SMALL TO MAKE A DIFFERENCE</td>\n",
+       "      <td>Greta Thunberg</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Penguin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>SAPIENS</td>\n",
+       "      <td>Yuval Noah Harari</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Harper Perennial</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>JUST MERCY</td>\n",
+       "      <td>Bryan Stevenson</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Spiegel &amp; Grau</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>BORN A CRIME</td>\n",
+       "      <td>Trevor Noah</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Spiegel &amp; Grau</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3130</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>CRYING IN H MART</td>\n",
+       "      <td>Michelle Zauner</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Vintage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3131</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>AN IMMENSE WORLD</td>\n",
+       "      <td>Ed Yong</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Random House</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3132</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>ALL ABOUT LOVE</td>\n",
+       "      <td>bell hooks</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Morrow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3133</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>THE REVOLUTIONARY</td>\n",
+       "      <td>Stacy Schiff</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Back Bay</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3134</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>THE SONG OF THE CELL</td>\n",
+       "      <td>Siddhartha Mukherjee</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Scribner</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3135 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Year on List                                     Title  \\\n",
+       "0             2020                  I HEARD YOU PAINT HOUSES   \n",
+       "1             2020  NO ONE IS TOO SMALL TO MAKE A DIFFERENCE   \n",
+       "2             2020                                   SAPIENS   \n",
+       "3             2020                                JUST MERCY   \n",
+       "4             2020                              BORN A CRIME   \n",
+       "...            ...                                       ...   \n",
+       "3130          2023                          CRYING IN H MART   \n",
+       "3131          2023                          AN IMMENSE WORLD   \n",
+       "3132          2023                            ALL ABOUT LOVE   \n",
+       "3133          2023                         THE REVOLUTIONARY   \n",
+       "3134          2023                      THE SONG OF THE CELL   \n",
+       "\n",
+       "                    Author  Rank         Publisher  \n",
+       "0           Charles Brandt     1        Steerforth  \n",
+       "1           Greta Thunberg     2           Penguin  \n",
+       "2        Yuval Noah Harari     3  Harper Perennial  \n",
+       "3          Bryan Stevenson     4    Spiegel & Grau  \n",
+       "4              Trevor Noah     5    Spiegel & Grau  \n",
+       "...                    ...   ...               ...  \n",
+       "3130       Michelle Zauner    11           Vintage  \n",
+       "3131               Ed Yong    12      Random House  \n",
+       "3132            bell hooks    13            Morrow  \n",
+       "3133          Stacy Schiff    14          Back Bay  \n",
+       "3134  Siddhartha Mukherjee    15          Scribner  \n",
+       "\n",
+       "[3135 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"NYTInfo_2.csv\")\n",
+    "df2 = pd.read_csv(\"NYTinfo.csv\")\n",
+    "df['Date'] = df2['Year on List']\n",
+    "df = df.rename(columns={'Date':'Year on List'})\n",
+    "df"
    ]
   },
   {
@@ -305,9 +532,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
