--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -172,7 +172,7 @@
     "        writer = csv.writer(csvfile)\n",
     "        \n",
     "        # Write header row with the new \"Publisher\" field\n",
-    "        writer.writerow([\"Date\", \"Title\", \"Author\", \"Rank\", \"Publisher\", \"Description\"])\n",
+    "        writer.writerow([\"Date\", \"Title\", \"Author\", \"Rank\", \"Publisher\", \"Weeks on List\"])\n",
     "        \n",
     "        # Loop through weekly dates and fetch data\n",
     "        for date in weekly_dates:\n",
@@ -192,8 +192,12 @@
     "                            book[\"title\"],\n",
     "                            book[\"author\"],\n",
     "                            book[\"rank\"],\n",
-    "                            book[\"publisher\"]\n",
+    "                            book[\"publisher\"],\n",
+    "                            book[\"weeks_on_list\"]\n",
     "                        ])\n",
+    "                    print(f\"Successfully saved data for {date_str}\")\n",
+    "                else:\n",
+    "                    print(f\"Error on {date_str}: {response.status_code} - {response.text}\")\n",
     "            except Exception as e:\n",
     "                print(f\"An error occurred for {date_str}: {e}\")\n",
     "            time.sleep(12)\n",
@@ -202,13 +206,13 @@
     "end_date = datetime(2023, 12, 31)\n",
     "\n",
     "# Call the function and save data\n",
-    "output_csv_file = \"NYTInfo_2.csv\"\n",
+    "output_csv_file = \"NYTInfo_Revised.csv\"\n",
     "get_weekly_lists_and_save_to_csv(start_date, end_date, output_csv_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -237,6 +241,7 @@
        "      <th>Author</th>\n",
        "      <th>Rank</th>\n",
        "      <th>Publisher</th>\n",
+       "      <th>Weeks on List</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -247,6 +252,7 @@
        "      <td>Charles Brandt</td>\n",
        "      <td>1</td>\n",
        "      <td>Steerforth</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -255,6 +261,7 @@
        "      <td>Greta Thunberg</td>\n",
        "      <td>2</td>\n",
        "      <td>Penguin</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -263,6 +270,7 @@
        "      <td>Yuval Noah Harari</td>\n",
        "      <td>3</td>\n",
        "      <td>Harper Perennial</td>\n",
+       "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -271,6 +279,7 @@
        "      <td>Bryan Stevenson</td>\n",
        "      <td>4</td>\n",
        "      <td>Spiegel &amp; Grau</td>\n",
+       "      <td>184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -279,9 +288,11 @@
        "      <td>Trevor Noah</td>\n",
        "      <td>5</td>\n",
        "      <td>Spiegel &amp; Grau</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -295,6 +306,7 @@
        "      <td>Michelle Zauner</td>\n",
        "      <td>11</td>\n",
        "      <td>Vintage</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3131</th>\n",
@@ -303,6 +315,7 @@
        "      <td>Ed Yong</td>\n",
        "      <td>12</td>\n",
        "      <td>Random House</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3132</th>\n",
@@ -311,6 +324,7 @@
        "      <td>bell hooks</td>\n",
        "      <td>13</td>\n",
        "      <td>Morrow</td>\n",
+       "      <td>106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3133</th>\n",
@@ -319,6 +333,7 @@
        "      <td>Stacy Schiff</td>\n",
        "      <td>14</td>\n",
        "      <td>Back Bay</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3134</th>\n",
@@ -327,10 +342,11 @@
        "      <td>Siddhartha Mukherjee</td>\n",
        "      <td>15</td>\n",
        "      <td>Scribner</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3135 rows × 5 columns</p>\n",
+       "<p>3135 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -347,30 +363,30 @@
        "3133          2023                         THE REVOLUTIONARY   \n",
        "3134          2023                      THE SONG OF THE CELL   \n",
        "\n",
-       "                    Author  Rank         Publisher  \n",
-       "0           Charles Brandt     1        Steerforth  \n",
-       "1           Greta Thunberg     2           Penguin  \n",
-       "2        Yuval Noah Harari     3  Harper Perennial  \n",
-       "3          Bryan Stevenson     4    Spiegel & Grau  \n",
-       "4              Trevor Noah     5    Spiegel & Grau  \n",
-       "...                    ...   ...               ...  \n",
-       "3130       Michelle Zauner    11           Vintage  \n",
-       "3131               Ed Yong    12      Random House  \n",
-       "3132            bell hooks    13            Morrow  \n",
-       "3133          Stacy Schiff    14          Back Bay  \n",
-       "3134  Siddhartha Mukherjee    15          Scribner  \n",
+       "                    Author  Rank         Publisher  Weeks on List  \n",
+       "0           Charles Brandt     1        Steerforth              8  \n",
+       "1           Greta Thunberg     2           Penguin              6  \n",
+       "2        Yuval Noah Harari     3  Harper Perennial             84  \n",
+       "3          Bryan Stevenson     4    Spiegel & Grau            184  \n",
+       "4              Trevor Noah     5    Spiegel & Grau             45  \n",
+       "...                    ...   ...               ...            ...  \n",
+       "3130       Michelle Zauner    11           Vintage             38  \n",
+       "3131               Ed Yong    12      Random House             13  \n",
+       "3132            bell hooks    13            Morrow            106  \n",
+       "3133          Stacy Schiff    14          Back Bay              8  \n",
+       "3134  Siddhartha Mukherjee    15          Scribner              4  \n",
        "\n",
-       "[3135 rows x 5 columns]"
+       "[3135 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"NYTInfo_2.csv\")\n",
+    "df = pd.read_csv(\"NYTInfo_Revised.csv\")\n",
     "df2 = pd.read_csv(\"NYTinfo.csv\")\n",
     "df['Date'] = df2['Year on List']\n",
     "df = df.rename(columns={'Date':'Year on List'})\n",
