--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
+    "- Neha Nair\n",
     "- Hulk\n",
     "- Iron Man\n",
     "- Thor\n",
@@ -242,6 +242,7 @@
        "      <th>Rank</th>\n",
        "      <th>Publisher</th>\n",
        "      <th>Weeks on List</th>\n",
+       "      <th>On a Celebrity Reading List</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -253,6 +254,7 @@
        "      <td>1</td>\n",
        "      <td>Steerforth</td>\n",
        "      <td>8</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -262,6 +264,7 @@
        "      <td>2</td>\n",
        "      <td>Penguin</td>\n",
        "      <td>6</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -271,6 +274,7 @@
        "      <td>3</td>\n",
        "      <td>Harper Perennial</td>\n",
        "      <td>84</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -280,6 +284,7 @@
        "      <td>4</td>\n",
        "      <td>Spiegel &amp; Grau</td>\n",
        "      <td>184</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -289,9 +294,11 @@
        "      <td>5</td>\n",
        "      <td>Spiegel &amp; Grau</td>\n",
        "      <td>45</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -307,6 +314,7 @@
        "      <td>11</td>\n",
        "      <td>Vintage</td>\n",
        "      <td>38</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3131</th>\n",
@@ -316,6 +324,7 @@
        "      <td>12</td>\n",
        "      <td>Random House</td>\n",
        "      <td>13</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3132</th>\n",
@@ -325,6 +334,7 @@
        "      <td>13</td>\n",
        "      <td>Morrow</td>\n",
        "      <td>106</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3133</th>\n",
@@ -334,6 +344,7 @@
        "      <td>14</td>\n",
        "      <td>Back Bay</td>\n",
        "      <td>8</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3134</th>\n",
@@ -343,10 +354,11 @@
        "      <td>15</td>\n",
        "      <td>Scribner</td>\n",
        "      <td>4</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3135 rows × 6 columns</p>\n",
+       "<p>3135 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -363,20 +375,33 @@
        "3133          2023                         THE REVOLUTIONARY   \n",
        "3134          2023                      THE SONG OF THE CELL   \n",
        "\n",
-       "                    Author  Rank         Publisher  Weeks on List  \n",
-       "0           Charles Brandt     1        Steerforth              8  \n",
-       "1           Greta Thunberg     2           Penguin              6  \n",
-       "2        Yuval Noah Harari     3  Harper Perennial             84  \n",
-       "3          Bryan Stevenson     4    Spiegel & Grau            184  \n",
-       "4              Trevor Noah     5    Spiegel & Grau             45  \n",
-       "...                    ...   ...               ...            ...  \n",
-       "3130       Michelle Zauner    11           Vintage             38  \n",
-       "3131               Ed Yong    12      Random House             13  \n",
-       "3132            bell hooks    13            Morrow            106  \n",
-       "3133          Stacy Schiff    14          Back Bay              8  \n",
-       "3134  Siddhartha Mukherjee    15          Scribner              4  \n",
+       "                    Author  Rank         Publisher  Weeks on List  \\\n",
+       "0           Charles Brandt     1        Steerforth              8   \n",
+       "1           Greta Thunberg     2           Penguin              6   \n",
+       "2        Yuval Noah Harari     3  Harper Perennial             84   \n",
+       "3          Bryan Stevenson     4    Spiegel & Grau            184   \n",
+       "4              Trevor Noah     5    Spiegel & Grau             45   \n",
+       "...                    ...   ...               ...            ...   \n",
+       "3130       Michelle Zauner    11           Vintage             38   \n",
+       "3131               Ed Yong    12      Random House             13   \n",
+       "3132            bell hooks    13            Morrow            106   \n",
+       "3133          Stacy Schiff    14          Back Bay              8   \n",
+       "3134  Siddhartha Mukherjee    15          Scribner              4   \n",
        "\n",
-       "[3135 rows x 6 columns]"
+       "      On a Celebrity Reading List  \n",
+       "0                           False  \n",
+       "1                           False  \n",
+       "2                           False  \n",
+       "3                           False  \n",
+       "4                           False  \n",
+       "...                           ...  \n",
+       "3130                        False  \n",
+       "3131                        False  \n",
+       "3132                        False  \n",
+       "3133                        False  \n",
+       "3134                        False  \n",
+       "\n",
+       "[3135 rows x 7 columns]"
       ]
      },
      "execution_count": 1,
